--- a/imu-exp/Makefile
+++ b/imu-exp/Makefile
@@ -18,7 +18,8 @@ PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_VERSION:=HEAD
-PKG_SOURCE_URL:=git@github.com:OnionIoT/imu-exp.git # TODO: change this back to https:// once you're done
+# TODO: change this back to https:// once you're done
+PKG_SOURCE_URL:=git@github.com:OnionIoT/imu-exp.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
 PKG_SOURCE:=$(PKG_NAME).tar.gz
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
